2001-09-30  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am (EXTRA_DIST): Distribute contrib/msvc/CppUnit.WWTpl
	and contrib/msvc/readme.txt.
	(dist-hook): Change line endings of these files.

	* include/cppunit/extensions/RepeatedTest.h
	* src/cppunit/RepeatedTest.cpp (countTestCases, toString): 
	Add const qualifier to function.

2001-09-30 Baptiste Lepilleur <gaiacrtn@free.fr>

	* contrib/msvc/CppUnit.WWTpl: added, template for WorkSpace Whiz! 
	to create new classes and unit tests.

	* doc/FAQ:
	* INSTALL-WIN32.txt: moved FAQ from install-WIN32 to that file. Added
	a generic question to hint at the helper macros.

	* include/cppunit/extensions/HelperMacros.h: bug #464844, moved
	declaration of ThisTestCaseFactory from CPPUNIT_TEST_SUITE_END to
	CPPUNIT_TEST_SUITE where the Fixture class name is available from
	the macro parameter.

2001-09-30  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* include/cppunit/config-mac.h: New.  Macintosh configuration,
	courtesy of Duane Murphy.

	* include/cppunit/Portability.h: Move <string> include inside
	#if-block that needs it.

	* doc/Makefile.am (doc-dist): Creates tar file of HTML doc files.
	Remove all wildcarded filenames.  Do not bother with manpages.

	* Makefile.am (EXTRA_DIST): Distribute INSTALL-unix and
	cppunit-config.1.
	(man_MANS): Install cppunit-config.1.
	(doc-dist): Use "make doc-dist" in doc directory.

	* cppunit-config.1: Document --prefix and --exec-prefix.

	* cppunit-config.in (Usage): Remove "[LIBRARIES]" from help string.

2001-09-29  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Set version to 1.6.1.

2001-09-29 Baptiste Lepilleur <gaiacrtn@free.fr>

	* example/cppunittest/TestCaller.*: remove some memory leaks.
	TestCaller exception catching features is now tested correctly.
	Previous test tested nothing!

2001-09-23  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Set version to 1.6.0.

	* Makefile.am (EXTRA_DIST): Add BUGS.
